apps/agent-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: langchain
  namespace: langchain
  labels:
    app: langchain
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: langchain
